# langgraph-docker

./: .gitignore  Dockerfile  README.md  client.py  docker-compose.yml  langgraph.json  pyproject.toml
.github/workflows/: pylint.yml
agents/: simple_agent.py
notebooks/: stream.ipynb
